src/objects/Literature_Request__c.object
<CustomObject>
    <description>Will contain information for literature and logo items</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Related contacts for Harte Hanks</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Literature Requests</relationshipLabel>
        <relationshipName>Literature_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>The date materials were requested</description>
        <label>Date Requested</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Literature Request</label>
    <nameField>
        <label>Literature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Literature Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>